# AI-Diet-Plan

backend/: pyproject.toml
backend/app/: db.py  debs.py  main.py  models.py  schemas.py
backend/app/auth/: auth.py
backend/app/functions/: function.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/homepage/: page.tsx
frontend/src/app/landingpage/: form.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/login/createaccount/: page.tsx
frontend/src/app/login/forget/: page.tsx
frontend/src/app/login/forget/confirmpassword/: page.tsx
frontend/src/app/most_use_material/: footer.tsx  login_button.tsx
frontend/src/app/privacy_policy/: page.tsx
frontend/src/app/terms_of_services/: page.tsx
